--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-server",
+  "name": "mern-backend-server",
   "version": "1.0.0",
   "type": "module",
   "description": "mern backend",
