--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.17.1"
   },
   "scripts": {
-    "start": "node index",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Amin Meraji",
